--- a/index.html
+++ b/index.html
@@ -775,17 +775,24 @@
 
     <div class="row">
         <div class="game">
-            <img src="5.png" alt="Football X Preview">
+            <img src="5.png" alt="LuckyJet Preview">
             <div class="game-info">
                 <h3 id="game11-title">LuckyJet</h3>
                 <button id="game11-button" onclick="openGame('lucky')">Open</button>
             </div>
         </div>
         <div class="game">
-            <img src="6.png" alt="CoinFlip Preview">
+            <img src="6.png" alt="Aviator Preview">
             <div class="game-info">
                 <h3 id="game-title">Aviator</h3>
                 <button id="game12-button" onclick="openGame('aviator')">Open</button>
+            </div>
+        </div>
+        <div class="game">
+            <img src="1.png" alt="Mines Preview">
+            <div class="game-info">
+                <h3 id="game11-title">Mines</h3>
+                <button id="game11-button" onclick="openGame('mines')">Open</button>
             </div>
         </div>
     </div>
